[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Actors/Creature.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/enemy.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/Skeleton.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "GETHIT",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "MOVE",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5.5, 13 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 15.5 )

[node name="Skeleton" instance=ExtResource( 1 )]
script = ExtResource( 3 )
maxSpeedH = 40
knockbackHSpeed = 20
constant_roam = false
idle_length = 2
move_length = 6

[node name="AnimatedSprite" parent="." index="0"]
position = Vector2( 1, -16 )
frames = SubResource( 8 )
animation = "IDLE"

[node name="Stats" parent="." index="1"]
max_health = 3

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0.5, -13.5 )

[node name="ray_left" parent="." index="3"]
position = Vector2( -8, 0 )

[node name="ray_right" parent="." index="4"]
position = Vector2( 8, 0 )

[node name="idle_timer" type="Timer" parent="." index="5"]

[node name="move_timer" type="Timer" parent="." index="6"]

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0.5, -14 )
shape = SubResource( 9 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -14.5 )
shape = SubResource( 10 )

[node name="knockback_timer" parent="." index="9"]
wait_time = 0.5

[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
